# taskwarrior-jot

./: CHANGELOG.md  README.md  config-jot.toml  install.sh  jot  pyproject.toml
jot_core/: __init__.py  app.py  cli.py  config.py  doctor.py  editor.py  events.py  frontmatter.py  index.py  models.py  nautical.py  notes.py  ops.py  output.py  search.py  services.py  storage.py  taskwarrior.py  templates.py
jot_tui/: app.py  palette.py
templates/: chain-note.md  project-note.md  task-note.md
tests/: test_jot.py
